--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next-auth": "^4.24.10",
     "razorpay": "^2.9.5",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "eslint": "^8",
